--- a/FORM.html
+++ b/FORM.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>form</title>
+    
 </head>
 <body >
     
@@ -26,6 +27,7 @@
                 Dancing<input type="checkbox">
                 Reading books<input type="checkbox">
                 Travelling<input type="checkbox">
+                Writing<input type="checkbox">
         <br><br>
         Contact number:<input type="text">
         <br><br>
