Clean up branchlist.html by removing comments
Removed commented-out ordered list and cleaned up HTML.

--- a/branchlist.html
+++ b/branchlist.html
@@ -6,14 +6,14 @@
     <title>types of list</title>
 </head>
 <body>
-    <!-- <ol type="A" start="2">
+    < <ol type="A" >
         <li>cse</li>
         <li>aiml</li>
         <li>it</li>
         <li>ece</li>
     </ol>
 
-     -->
+     
     <ul>
          <li>cse</li>
         <li>aiml</li>
