Change ordered list type from 'A' to '1'

--- a/branchlist.html
+++ b/branchlist.html
@@ -6,7 +6,7 @@
     <title>types of list</title>
 </head>
 <body>
-    < <ol type="A" >
+    < <ol type="1" >
         <li>cse</li>
         <li>aiml</li>
         <li>it</li>
